Add the prototype of TaskDispatcher
