# swagger-ui/swagger-api.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   version: 0.0.1
-  title: DataMiningCloud Engine Dispacther
+  title: Engine Task Dispacther
   description: An API specification of DMC Dispacther based on swagger-2.0 specification
   contact:
     name: Aid
@@ -20,32 +20,39 @@ produces:
   - application/xml
 paths:
 
-  /processes:
-    post:
-      tags:
-      - processes
-      summary: Create a new process.
-      description: Dispacther will dispatch process event to the agent.
-      responses:
-        202:
-          description: OK
-
-  /processes/{key}:
+  /slots/{key}:
     get:
       tags:
-      - processes
-      sumary: Check the status of processes
+      - slots
+      parameters:
+      - name: key
+        in: path
+        type: string
+      sumary: Check the status of slots
       responses:
         200:
           description: OK
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/TaskEvent'
 
-  /processes/{key}/{subProcessKey}:
+
+  /slots/{key}:
     post:
       tags:
-      - processes
-      summary: When a agent finished a process, call this API as a completed handler, the dispatch will dispatch next agent if needed.
+      - slots
+      parameters:
+      - name: key
+        in: path
+        type: string
+      - name: body
+        in: body
+        schema:
+          $ref: '#/definitions/TaskEvent'
+      description: When a agent finished a process, call this API as a completed handler, the dispatch will dispatch next agent if needed.
       responses:
-        202:
+        204:
           description: OK
 
 definitions:
@@ -95,57 +102,13 @@ definitions:
       dataInfor:
         $ref: '#/definitions/DataInfor'
 
-  EvaluationData:
+  TaskEvent:
     properties:
-      data:
-        $ref: '#/definitions/DMData'
-      resultAttr:
-        $ref: '#/definitions/Attribute'
-
-  TrainerEvaluationData:
-    properties:
-      data:
-        $ref: '#/definitions/DMData'
-      resultAttr:
-        $ref: '#/definitions/Attribute'
-      crossNumber:
-        type: integer
-
-  ServiceEvaluationMetadata:
-    properties:
-      status:
+      _id:
         type: string
       datetime:
         type: string
-
-  ServiceEvaluation:
-    properties:
-      metadata:
-        $ref: '#/definitions/ServiceEvaluationMetadata'
-      evaData:
-        $ref: '#/definitions/EvaluationData'
-      executionPeriod:
-        type: string
-      result:
-        $ref: '#/definitions/DMData'
-
-  TrainerEvaluationMetadata:
-    properties:
       status:
         type: string
-      datetime:
-        type: string
-      evaType:
-        description: 10-crosses evaluation? or n-crosses?
-        type: string
-
-  TrainerEvaluation:
-    properties:
-      metadata:
-        $ref: '#/definitions/TrainerEvaluationMetadata'
-      evaData:
-        $ref: '#/definitions/EvaluationData'
-      executionPeriod:
-        type: string
-      result:
+      data:
         $ref: '#/definitions/DMData'
